--- a/home/toc.html
+++ b/home/toc.html
@@ -111,7 +111,7 @@
                           <a href="techguides/environment-basic-operations.html" name="" title="Perform Environment Basic Operations">Perform Environment Basic Operations</a>
                         </li>
                         <li>
-                          <a href="techguides/use-gitlab-repository.html" name="" title="Deploy features to environment">Deploy features to environment</a>
+                          <a href="techguides/deploy-an-update-to-an-existing-environment.html" name="" title="Deploy an update to an existing environment">Deploy an update to an existing environment</a>
                         </li>
                         <li>
                           <a href="techguides/add-app-endpoint.html" name="" title="Add new endpoints to an environment">Add new endpoints to an environment</a>
@@ -144,7 +144,7 @@
                           <a href="export-import-database-video.html" name="" title="Export and Import a Database">Export and Import a Database</a>
                         </li>
                         <li>
-                          <a href="deploy-features-to-an-environment-video.html" name="" title="Deploy Features to an Environment">Deploy Features to an Environment</a>
+                          <a href="deploy-an-update-to-an-existing-environment-video.html" name="" title="Deploy an Update to an Existing Environment">Deploy an Update to an Existing Environment</a>
                         </li>
                         <li>
                           <a href="clone-environment-video.html" name="" title="Clone an Environment">Clone an Environment</a>
