--- a/home/techguides/components-products.html
+++ b/home/techguides/components-products.html
@@ -253,7 +253,7 @@ curl -H &quot;X-JFrog-Art-Api:AKCp5dKYyM9WMoiacim9yedAZfG6gLwwcYugPmzZhqHkdRe6ex
 <p>d) Any other IN and OUT message directories used for interfaces</p>
 <p>e) User directories or BPs created by developers and the local source code in them for testing purposes</p>
 <h1 id="wealth-suite-golden--copy-pre-requisites">Wealth suite golden  copy pre-requisites</h1>
-<h2 id="tap-core"><strong>TAP CORE</strong></h2>
+<h2 id="tap-core">TAP CORE</h2>
 <p>&nbsp; <strong>Database-generic</strong></p>
 <ul>
 <li><p>The golden copy of the TAP DB must be obtained  by doing an extract using the cloning tool (cloning tool version to be used should be the one delivered with Wealth distribution)</p>
@@ -273,7 +273,7 @@ curl -H &quot;X-JFrog-Art-Api:AKCp5dKYyM9WMoiacim9yedAZfG6gLwwcYugPmzZhqHkdRe6ex
 <li><p>DatabaseSybase.</p>
 </li>
 </ul>
-<h2 id="gwpack---l3"><strong>GWPACK - L3</strong></h2>
+<h2 id="gwpack---l3">GWPACK - L3</h2>
 <ul>
 <li><p>L3 GWPACK format must suit exact format to be provided by Temenos </p>
 </li>
@@ -282,7 +282,7 @@ curl -H &quot;X-JFrog-Art-Api:AKCp5dKYyM9WMoiacim9yedAZfG6gLwwcYugPmzZhqHkdRe6ex
 <li><p>Distribution must come as a single full distribution (i.e. any update/hotfix must be delivered in TCD platform as a full release to be requested to Distribution team</p>
 </li>
 </ul>
-<h2 id="tti--l3"><strong>TTI -L3</strong></h2>
+<h2 id="tti--l3">TTI -L3</h2>
 <ul>
 <li><p>L3 GWPACK format must suit exact format to be provided by Temenos </p>
 </li>
@@ -291,7 +291,7 @@ curl -H &quot;X-JFrog-Art-Api:AKCp5dKYyM9WMoiacim9yedAZfG6gLwwcYugPmzZhqHkdRe6ex
 <li><p>Distribution must come as a single full distribution (i.e. any update/hotfix must be delivered in TCD platform as a full release to be requested to Distribution team</p>
 </li>
 </ul>
-<h2 id="tap-web"><strong>TAP Web</strong></h2>
+<h2 id="tap-web">TAP Web</h2>
 <ul>
 <li>TAP Web golden copy consists only on list of L1 updates (hotfixes) and L3 packages (TAP Web Design studio packages)  to be provided</li>
 </ul>
