--- a/home/techguides/components-products.html
+++ b/home/techguides/components-products.html
@@ -320,7 +320,7 @@ curl -H &quot;X-JFrog-Art-Api:AKCp5dKYyM9WMoiacim9yedAZfG6gLwwcYugPmzZhqHkdRe6ex
 <li><span style="color:red">In addition to the mandatory components, you will need to add those components you need to test - not related to your selected template.</span></li>
 <li>For all added components, make sure you add the related files archive into the artifactory as explained above.</li>
 </ul>
-<p><img src="images/products-templates.png" alt=""></p>
+<p><img src="./images/products-template.png" alt=""></p>
 <h3 id="how-to-delete-a-component">How to Delete a Component</h3>
 <p>Components fields are not editable, so you have only the options to create or to delete them.</p>
 <div class="NOTE"><h5>Note</h5><p><span style="color:red">If your component is <strong>attached to a Product</strong>, you will not be able to delete it. <p>
