--- a/home/techguides/t24-development.html
+++ b/home/techguides/t24-development.html
@@ -108,7 +108,7 @@
 <li>In the next screen, input your routine name and click <strong>Submit</strong>.<br><img src="images/monitor-application-submit.png" alt="monitor application"><br><br></li>
 <li>In the next screen, the details of your routine can be seen.<br><img src="images/monitor-application-result.png" alt="monitor application"><br><br></li>
 </ul>
-<p>More about the pre-requisites, import / export T24 applications can be found <a href="http://documentation.temenos.cloud/home/techguides/t24-development-appendix" target="_blank"><strong>here</strong></a>.</p>
+<p>More about the pre-requisites, import / export T24 applications can be found <a href="develop_T24_packages_plugins_and_code " target="_blank"><u><strong>here</strong></u></a>.</p>
 <p><br></p>
               <hr>
               
