--- a/home/techguides/release-info-2020.html
+++ b/home/techguides/release-info-2020.html
@@ -82,7 +82,7 @@
 <h2 id="release-notes">Release Notes</h2>
 
 <p>This page provides information about the monthly Temenos Continuous Deployment Platform features and improvements in each release.</p>
-<h1 id="19th-february-release-notes"><strong>19th February Release Notes</strong></h1>
+<h1 id="202002-release-notes"><strong>2020.02 Release Notes</strong></h1>
 <p><strong>InfraBuild</strong>: 362 &nbsp;<strong>|</strong>&nbsp; <strong>PortalTag</strong>: cloudPortal_1.79e
 &nbsp;<strong>|</strong>&nbsp; <strong>ControllerBuild</strong>: 26</p>
 <h2 id="technical-enhancements">Technical Enhancements</h2>
@@ -100,7 +100,7 @@
 </br></p>
 <p><br>
 </br></p>
-<h1 id="29th-january-release-notes"><strong>29th January Release Notes</strong></h1>
+<h1 id="202001-release-notes"><strong>2020.01 Release Notes</strong></h1>
 <p><strong>InfraBuild</strong>: 355 &nbsp; <strong>|</strong>  &nbsp;<strong>PortalTag</strong>: cloudPortal_1.78 &nbsp;<strong>|</strong>  &nbsp;<strong>ControllerBuild</strong>: 12</p>
 <h2 id="dashboard-enhancements">Dashboard Enhancements</h2>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>1. UI Updates</strong></p>
