--- a/home/techguides/stage.html
+++ b/home/techguides/stage.html
@@ -120,7 +120,7 @@
 </ul>
 <p>Any other created stage can be deleted at any moment as it is not dependent of the subsequent features added such as components and products. Components and Products belong to the streams.</p>
 <p>Example of the default stage defined into the metadata (you can set any name you prefer instead of <em>demo_stage</em>):</p>
-<p><img src="./images/stage-metadata.png" alt=""></p>
+<p><img src="images/stage-metadata.png" alt=""></p>
 <p><br></p>
               <hr>
               
