--- a/home/techguides/add-app-endpoint.html
+++ b/home/techguides/add-app-endpoint.html
@@ -113,7 +113,7 @@ As a reference, if you want to insert an endpoint which links to your environmen
 </div>
 <p>In order to create new endpoints for the T24 application of your Environment, the next steps must be followed:</p>
 <ul>
-<li><p>Clone the GitLab repository of your Environment in your local machine. For more details on how to clone a repository, check this <a href="./use-gitlab-repository.md" target="_blank"><strong>page</strong></a>.</p>
+<li><p>Clone the GitLab repository of your Environment in your local machine. For more details on how to clone a repository, check this <strong><a href="http://documentation.temenos.cloud/home/techguides/deploy-an-update-to-an-existing-environment.html">page</a></strong>.</p>
 </li>
 <li><p>Create a file with <strong>.endpoint</strong> extension inside <strong>plugins</strong> folder of the cloned repository as in the bellow picture. The name of the file is not important, but it should be relevant for your requirement.
 <img src="images/endpoint-create.png" alt="create endpoint file"></p>
