--- a/home/techguides/access-ud-directories.html
+++ b/home/techguides/access-ud-directories.html
@@ -82,19 +82,20 @@
 <h1 id="access-t24-ud-directories">Access T24 UD Directories</h1>
 
 <p>Learn how to easily access the T24 UD directories of your sandbox and make updates, without the need of exporting zip files, but using symbolic links on the SFTP server to the T24 VM machines.</p>
-<div class="NOTE"><h5>Note</h5><p>Check also our <a href="https://www.youtube.com/watch?v=wqBTV76cAOQ" target="_blank"><strong>video tutorial</strong></a>. </p>
+<div class="NOTE"><h5>Note</h5><p>Check also our <a href="https://www.youtube.com/watch?v=wqBTV76cAOQ" target="_blank"><strong>Video tutorial</strong>!
+</a> (to be updated)</p>
 </div>
 <h2 id="create-new-environment">Create New Environment</h2>
 <ul>
 <li>Login to the indicated Temenos Continuous Deployment Platform - either: <a href="https://portal.temenos.cloud/"><strong>https://portal.temenos.cloud/</strong></a> or <a href="https://tcd-portal.temenos.cloud/"><strong>https://tcd-portal.temenos.cloud/</strong></a>.</li>
 <li>Each time you login, you must accept the Privacy Notice in order to have access to the portal.</li>
-<li>The first page that is displayed after login is the <strong>Environments</strong> page where you can fill the date to create a <strong>New environment</strong>.<ul>
+<li>The first page that is displayed after login is the <strong>Environments</strong> page where you can fill the date to create a <strong>New environment</strong><ul>
 <li>Fill the mandatory fields:<ul>
 <li><strong>Name</strong></li>
 <li><strong>Description</strong></li>
 </ul>
 </li>
-<li>Select an application from <strong>Cloud native applications</strong> (for T24 select T24, for FCM select FCM)</li>
+<li>Select an application from <strong>Cloud native applications</strong></li>
 <li>Choose a template from <strong>Templates</strong> list</li>
 <li><em>Labels field is optional</em></li>
 <li>Click <strong>Create environment</strong></li>
