--- a/home/techguides/triage-workflow.html
+++ b/home/techguides/triage-workflow.html
@@ -104,7 +104,7 @@
 </ul>
 <div class="NOTE"><h5>Note</h5><p>Into <strong>t24home</strong> you can find T24.log referring to the T24 BrowserWeb processes, where you can identify the exact errors during the test run.</p>
 </div>
-<p>Also please check <a href="access-ud-directories.html" target="blank"><strong>this user guide</strong></a> in order to see how you can access the UD directories. </p>
+<p>Also please check <a href="./access-ud-directories.md" target="blank"><strong>this user guide</strong></a> in order to see how you can access the UD directories. </p>
 <p><br></p>
               <hr>
               
