--- a/home/toc.html
+++ b/home/toc.html
@@ -126,10 +126,13 @@
                           <a href="techguides/export-import-database.html" name="" title="Export and Import a Database">Export and Import a Database</a>
                         </li>
                         <li>
-                          <a href="techguides/access-ud-directories.html" name="" title="Access T24 UD Directories">Access T24 UD Directories</a>
+                          <a href="techguides/access-t24-ud-directories.html" name="" title="Access T24 UD Directories">Access T24 UD Directories</a>
                         </li>
                         <li>
-                          <a href="techguides/fcm-configuration.html" name="" title="Access FCM Directories and Use FCM Application">Access FCM Directories and Use FCM Application</a>
+                          <a href="techguides/access-fcm-ud-directories.html" name="" title="Access FCM UD Directories">Access FCM UD Directories</a>
+                        </li>
+                        <li>
+                          <a href="techguides/fcm-configuration.html" name="" title="Configure FCM Application">Configure FCM Application</a>
                         </li>
                       </ul>  </li>
                   <li>
@@ -246,6 +249,15 @@
                           <a href="techguides/triage-workflow.html" name="" title="Triage Workflow">Triage Workflow</a>
                         </li>
                       </ul>  </li>
+                </ul>  </li>
+            <li>
+              <span class="expand-stub"></span>
+              <a>Release information</a>
+                
+                <ul class="nav level2">
+                  <li>
+                    <a href="techguides/release-info-2020.html" name="" title="2020">2020</a>
+                  </li>
                 </ul>  </li>
             <li>
               <a href="faq.html" name="" title="FAQs">FAQs</a>
