--- a/docfx_project/site/home/techguides/create-publish-template.html
+++ b/docfx_project/site/home/techguides/create-publish-template.html
@@ -82,87 +82,8 @@
 <h1 id="how-to-create-and-publish-a-new-template-after-a-successful-factory-run">How to Create and Publish a New Template after a Successful Factory Run</h1>
 
 <p>This feature offers the possibility to baseline a particular version of a product and create a template from that version. Further anybody will be able to create an environment with the baselined version of the product.</p>
-<h1 id="prerequisites-to-set-up-the-factory">Prerequisites to set up the Factory:</h1>
-<h1 id="1-check-metadata-on-the-portal">1. Check Metadata on the portal</h1>
-<ul>
-<li>Login to the portal with your credentials.</li>
-<li>Click General button on the left side menu in order to see the metadata of your organization, from which you will need:<ul>
-<li>the ARTIFACTORY_URL</li>
-<li>the DEFAULT_REPO_NAME</li>
-</ul>
-</li>
-</ul>
-<p><img src="images/create-template-metadata.png" alt=""></p>
-<h1 id="2-create-a-repository-into-the-artifactory">2. Create a repository into the artifactory</h1>
-<ul>
-<li>Use the ARTIFACTORY_URL in order to login to the artifactory assigned to your organization.</li>
-<li>Login with your credentials.</li>
-<li>Click the Welcome button on the top right and choose <strong>Local repository</strong>.</li>
-</ul>
-<p><img src="images/create-template-artifactory-repo.png" alt=""></p>
-<ul>
-<li>Select the package type as <strong>Generic</strong>.</li>
-</ul>
-<p><img src="images/create-template-package-type.png" alt=""></p>
-<ul>
-<li>Fill the Repository Key with the DEFAULT_REPO_NAME from your organisation metadata on the portal.</li>
-</ul>
-<div class="NOTE"><h5>Note</h5><p>DEFAULT_REPO_NAME from metadata and Repository Key <strong>must</strong> be the same.</p>
-</div>
-<p><img src="images/create-template-repo-key.png" alt=""></p>
-<ul>
-<li>You can check the created repository by clicking the Artifacts button on the left side menu of the JFrog Artifactory:</li>
-</ul>
-<p><img src="images/create-template-artifacts.png" alt=""></p>
-<h1 id="3-setting-the-default-stage">3. Setting the Default Stage</h1>
-<p>To proceed further with all the configurations required in order to run a factory, you need to have a default stage created.</p>
-<p>There are two possibilities to set the stage:</p>
-<ul>
-<li>Either you set it from <strong>General</strong> and then <strong>Add New Metadata</strong>:</li>
-</ul>
-<p><img src="images/create-template-add-stage.png" alt=""></p>
-<ul>
-<li><p>Or when you create a new stream (see <strong>Streams</strong> button on the left), if the default stage was not yet configure, a third field will appear at the stream creation requiring to add a default stage. This stage will be automatically added after to the metadata.</p>
-</li>
-<li><p>After this step, the default stage will be automatically added to the repository into your Artifactory (the Artifactory link can be found into the metadata).</p>
-</li>
-</ul>
-<p><img src="images/create-template-repo-stage.png" alt=""></p>
-<h1 id="4-setting-the-stream">4. Setting the Stream</h1>
-<p>Go to the <strong>Streams</strong> buttons and click <strong>New Stream</strong>. The default stage will appear automatically associated.</p>
-<p><img src="images/create-template-stream.png" alt=""></p>
-<p><em>To see all the steps on how to create a stream, please also check the following</em> <a href="stream.html" target="blank">user guide</a>.</p>
-<h1 id="5-setting-the-stage">5. Setting the Stage</h1>
-<p>Go to <strong>Stages</strong> button and make sure you create a new stage, the one in the added components will be promoted.</p>
-<p><em>To see all the steps on how to add components and create products, please also check the following</em> <a href="stage.html" target="blank">user guide</a>.</p>
-<h1 id="6-setting-the-components-and-products">6. Setting the Components and Products</h1>
-<ul>
-<li>Go to <strong>Products</strong> button and make sure you add first the mandatory <strong>components</strong> related to the template that you need to use.</li>
-<li>Then configure the principle and base products. See an example of set-up below:</li>
-</ul>
-<p><img src="images/create-template-principle.png" alt=""></p>
-<p><img src="images/create-template-base.png" alt=""></p>
-<p>Also make sure you upload all the components&#39; binaries and test cases into the related folders of the artifactory.</p>
-<p><em>To see all the steps on how to add components and create products, please also check the following</em> <a href="components-products.html" target="blank">user guide</a>.</p>
-<h1 id="7-setting-the-factory">7. Setting the Factory</h1>
-<p>Go to <strong>Factories</strong> button and click <strong>New Factory</strong> on the top right. </p>
-<p>Make sure you:</p>
-<ul>
-<li>set a name</li>
-<li>set a description</li>
-<li>choose the appropriate environment and test templates</li>
-<li>set the source and base stages (in the below example the same stage was used in order to test the promotion of the  components along with the test cases added).</li>
-<li>set the principle and base products.</li>
-<li>click Create.</li>
-</ul>
-<p><img src="images/create-template-factory.png" alt=""></p>
-<p><em>To see all the steps on how to create a factory, please also check the following</em> <a href="factories.html" target="blank">user guide</a>.
-<em>To see all the steps on how to run a factory, please also check the following</em> <a href="run-factory.html" target="blank">user guide</a>.</p>
-<p>If the factory run is successful, the below will be displayed on the screen:</p>
-<p><img src="images/successful-factory-run.png" alt=""></p>
-<h1 id="8-see-the-new-environment">8. See the new environment</h1>
-<p>Expand the left side menu and click on &#39;Environments&#39;. You will see the enviroment that was created following the successful factory run:</p>
-<p><img src="images/factory-run-environment.png" alt=""></p>
+<p>To set up the factory, follow the steps from <a href="http://documentation.temenos.cloud/home/techguides/factories.html" title="here">here</a>.</p>
+<p>To run the factory, follow the steps from <a href="http://documentation.temenos.cloud/home/techguides/run-factory.html" title="here">here</a>.</p>
 <h1 id="create-and-publish-the-new-template-after-the-successful-factory-run">Create and Publish the New Template after the Successful Factory Run</h1>
 <p>There are two alternatives to Create and Publish the new Template after the Successful Run:</p>
 <ol>
