--- a/home/techguides/factories.html
+++ b/home/techguides/factories.html
@@ -157,7 +157,7 @@
 <li>if the factory run test is successful you can choose to stop/ or keep running the T24 environment</li>
 <li>the same applies for the Factory Run Failure scenario
 The &#39;Stop Environment&#39; and &#39;Keep Running Environment&#39; options are aimed to be used for costs purposes.
-<img src="images/factory-scheduler.png" alt=""></li>
+<img src="./images/factory-scheduler.png" alt=""></li>
 </ul>
 <p><br></p>
               <hr>
