--- a/home/toc.html
+++ b/home/toc.html
@@ -97,16 +97,13 @@
                 
                 <ul class="nav level2">
                   <li>
+                    <a href="user-creation-in-paas.html" name="" title="Create users">Create users</a>
+                  </li>
+                  <li>
                     <span class="expand-stub"></span>
-                    <a href="how-to-extend.html" name="" title="How to...">How to...</a>
+                    <a href="manage-environments.html" name="" title="Manage environments">Manage environments</a>
                       
                       <ul class="nav level3">
-                        <li>
-                          <a href="techguides/user-creation-in-paas.html" name="" title="Create users">Create users</a>
-                        </li>
-                        <li>
-                          <a href="techguides/manage-environments.html" name="" title="Manage environments">Manage environments</a>
-                        </li>
                         <li>
                           <a href="techguides/environment-basic-operations.html" name="" title="Perform Environment Basic Operations">Perform Environment Basic Operations</a>
                         </li>
