--- a/home/techguides/factories2.html
+++ b/home/techguides/factories2.html
@@ -125,12 +125,14 @@
 <li>Click on Settings button on the main menu on the left.</li>
 <li>Make sure you select first the <strong>Stream</strong> and <strong>Stage</strong> (this is the stage where components are promoted) where you want to create a factory and then click <strong>New Factory</strong> button on the top-right.</li>
 <li>Fill the required fields (see all definitions above and also below example):
-#### Factory Details ####<ul>
+<b>
+<br></b></li>
+</ul>
+<h4 id="factory-details">Factory Details</h4>
+<ul>
 <li><strong>Factory Name</strong>: choose a meaningful name for your factory.</li>
 <li><strong>Factory Description</strong>: insert a description that will help knowing what the factory is about.
 <img src="images/factory-details.png" alt="factory-details"></li>
-</ul>
-</li>
 </ul>
 <h4 id="product-configuration">Product Configuration</h4>
 <p>This stage represents the test environment that holds the testing framework and test scripts version of the principle product and source stage that are pre-tested from the perspective of the current factory.</p>
@@ -157,8 +159,8 @@
 </li>
 </ul>
 <h4 id="promotion-configuration">Promotion Configuration</h4>
-<pre><code>This stage represents a stable version of the principle product and source stage that are pre-tested from the perspective of the current factory.
-</code></pre><p><img src="images/factory-promotion-configuration.png" alt="factory-promotion-configuration"></p>
+<p>This stage represents a stable version of the principle product and source stage that are pre-tested from the perspective of the current factory.
+<img src="images/factory-promotion-configuration.png" alt="factory-promotion-configuration"></p>
 <h4 id="factory-scheduler">Factory Scheduler</h4>
 <p>A user has the privilege to configure the schedule of the factory run in order to automatically run the tests and have the results available daily</p>
 <ul>
