--- a/home/techguides/t24-development.html
+++ b/home/techguides/t24-development.html
@@ -93,7 +93,7 @@
 <li>A new screen will appear and choose <strong>OK</strong>.<br><img src="images/ok_after_push.png" alt="tortoise ok after push"><br><br></li>
 <li>A success message should be displayed. Press <strong>Close</strong>.
 <br>
-<img src="./images/success_after_push.png" alt="tortoise success after push">  </li>
+<img src="images/success_after_push.png" alt="tortoise success after push">  </li>
 </ul>
 <h2 id="trigger-the-deployment">Trigger the deployment</h2>
 <ul>
@@ -105,7 +105,7 @@
 <ul>
 <li>Log-in to your organisation into the Temenos Continuos Deployment Platform, go to your enviroment page and click on the <strong>Monitor Application</strong> Endpoint for the T24 application.<br><img src="images/t24-monitor-app.png" alt="monitor application"><br><br></li>
 <li>The TAFJEE page is opened. Click <strong>tShow</strong> to check if your developed routines were deployed in your sandbox. Details like the compilation date or the jar that contains the class of those routines can be checked.<br><img src="images/monitor-application-tshow.png" alt="monitor application"><br><br></li>
-<li>In the next screen, input your routine name and click <strong>Submit</strong>.<br><img src="./images/monitor-application-submit.png" alt="monitor application"><br><br></li>
+<li>In the next screen, input your routine name and click <strong>Submit</strong>.<br><img src="images/monitor-application-submit.png" alt="monitor application"><br><br></li>
 <li>In the next screen, the details of your routine can be seen.<br><img src="images/monitor-application-result.png" alt="monitor application"><br><br></li>
 </ul>
 <p>More about the pre-requisites, import / export T24 applications can be found  <a href="http://documentation.temenos.cloud/home/pdf/develop-T24-packages.pdf " target="_blank"><u><strong>here</strong></u></a>.</p>
