--- a/home/techguides/environment-creation-in-paas.html
+++ b/home/techguides/environment-creation-in-paas.html
@@ -88,7 +88,7 @@
 <li>Either click the Environments tab on the left menu and then click <strong>New Environment</strong> button on the top right corner.  </li>
 <li>Or you can already see the environment page open with the fields available to create a new environment.</li>
 </ul>
-<p><img src="images/env-tab.png" alt=""></p>
+<p><img src="./images/env-tab.png" alt=""></p>
 <p><br></p>
 <ul>
 <li>Fill Name and Description fields</li>
