--- a/home/techguides/export-import-database.html
+++ b/home/techguides/export-import-database.html
@@ -82,7 +82,7 @@
 <h1 id="export-and-import-databases">Export and Import Databases</h1>
 
 <p>This user guide explains how to import and export databases of a Temenos cloud environment in order to migrate datasets across environments. </p>
-<p>Login to your organization on the TCD (Temenos Continuous Deployment) portal (<a href="https://newportal.temenos.cloud">https://newportal.temenos.cloud</a>) read and accept the privacy notice.</p>
+<p>Login to your organization on the TCD (Temenos Continuous Deployment) portal (<a href="https://portal.temenos.cloud/">portal.temenos.cloud</a>) read and accept the privacy notice.</p>
 <p><img src="images/db-login.png" width="450" height="200"></p>
 <h2 id="create-an-environment">Create an Environment</h2>
 <ul>
