--- a/home/techguides/manage-environments.html
+++ b/home/techguides/manage-environments.html
@@ -87,7 +87,7 @@
 </ul>
 <p>The Temenos Development Platform support multitenancy and Organisations are designed to be distinctive accounts.  </p>
 <p>Upon subscription you&#39;ll receive a <strong>unique</strong> Organisation Id as a URL link. Your Organisation Id will look similar to this: </p>
-<p><img src="images/organisation-url.png" alt=""></p>
+<p><img src="images/organisation-url.png" alt=""> </p>
 <p>The confirmation of your Organisation activation will contain the link and access instructions to your designated Organisation administrator. The administrator is the first and only user.</p>
 <p><br></p>
 <ul>
@@ -100,7 +100,7 @@
 <li>Either click the Environments tab on the left menu and then click <strong>New Environment</strong> button on the top right corner.  </li>
 <li>Or you can already see the environment page open with the fields available to create a new environment.</li>
 </ul>
-<p><img src="images/env-tab.png" alt=""></p>
+<p><img src="images/env_tab.png" alt=""></p>
 <p><br></p>
 <ul>
 <li>Fill Name and Description fields</li>
@@ -119,7 +119,6 @@ All fields are mandatory except &#39;Labels&#39;.</li>
 <p><img src="images/env-template.png" alt=""></p>
 <p>Currently, the screen that opens will display an FCM and T24 default template. Click on the Template Type and select for one of the applications, for example T24 to see the latest retail Suites versions and other available templates.</p>
 <p><img src="images/env-template-type.png" alt=""></p>
-<p><img src="images/env-template-list.png" alt=""></p>
 <p><br></p>
               <hr>
               
